# show-renamer-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  test_rename_file.sh  test_rename_folder.sh
src/: file_search.rs  lib.rs  main.rs
