[package]
name = "show-renamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tmdb = "3.0.0"
tmdb = {git = "https://gitlab.com/sellaziz/tmdb-rs"}
regex = "1"
clap = { version = "3.2.14", features = ["derive"] }
